@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2022-2023 Shun Sakai
+//
+// SPDX-License-Identifier: Apache-2.0 OR MIT
+
 = Examples
 
 link:encrypt.rs[]::
