@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2022-2023 Shun Sakai
+//
+// SPDX-License-Identifier: Apache-2.0 OR MIT
+
 = Changelog
 :toc: macro
 :project-url: https://github.com/sorairolake/scryptenc-rs
@@ -18,6 +22,7 @@ toc::[]
 
 * Change the comment header to the format recommended by the REUSE
   Specification ({pull-request-url}/23[#23])
+* Make this project REUSE compliant ({pull-request-url}/24[#24])
 
 == {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-07-04
 
